--- a/Desktop/original Namaste React/episode 5/episode 5.1/ep 5.1/.gitignore
+++ b/Desktop/original Namaste React/episode 5/episode 5.1/ep 5.1/.gitignore
@@ -1,3 +1,30 @@
 /node_modules
 /.parcel-cache
 /dist
+# Ignore node_modules directory
+/node_modules/
+
+/.parcel-cache/
+/dist/
+
+/# Ignore system files
+/.DS_Store
+/Thumbs.db
+
+# Ignore user-specific files
+/.bash_history
+/.gitconfig
+/.lesshst
+
+# Ignore Windows system files
+/AppData/
+/Cookies/
+/Local Settings/
+/My Documents/
+/NetHood/
+/PrintHood/
+/Recent/
+/SendTo/
+/Start Menu/
+/Templates/
+/NTUSER.DAT*
